# Kotlin-Room

./: .gitignore  LICENSE  README.md  build.gradle  dependent.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_fragment.xml  activity_image_select.xml  activity_main.xml  fragment_demo.xml  fragment_demo_notitle.xml
app/src/main/res/values/: strings.xml
cpt_main/: build.gradle
cpt_main/src/main/: AndroidManifest.xml
cpt_main/src/main/res/layout/: activity_auth.xml  fragment_login.xml
cs_baselib/: build.gradle
cs_baselib/src/main/: AndroidManifest.xml
cs_baselib/src/main/assets/: 材料清单DOC.docx  材料清单TXT.txt
cs_baselib/src/main/java/androidx/navigation/: NavDestinationExt.kt
cs_baselib/src/main/res/anim/: close_enter.xml  close_exit.xml  open_enter.xml  open_exit.xml
cs_baselib/src/main/res/drawable/: anim_gloading.xml  progressloading2.xml
cs_baselib/src/main/res/layout/: base_layout_loading.xml  easy_titlebar.xml  layout_placeholder1.xml  layout_placeholder2.xml  view_error_layout.xml  view_gloading_global_status.xml
cs_baselib/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  styles.xml
cs_baselib/src/main/res/xml/: network_http_o_config.xml  permission_file_paths.xml
cs_cptServices/: build.gradle
cs_cptServices/src/main/: AndroidManifest.xml
cs_cptServices/src/main/res/layout/: activity_global_web.xml
cs_cptServices/src/main/res/navigation/: nav_demo11.xml
cs_cptServices/src/main/res/values/: strings.xml
cs_router/: build.gradle
cs_router/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lib_fdkaac/: build.gradle
lib_fdkaac/src/main/: AndroidManifest.xml
lib_fdkaac/src/main/cpp/: CMakeLists.txt  fdkcodec.cpp
lib_glrecord/: build.gradle
lib_glrecord/src/main/: AndroidManifest.xml
lib_glrecord/src/main/res/values/: attrs.xml
lib_glrecordx/: build.gradle
lib_glrecordx/src/main/: AndroidManifest.xml
lib_openh264/: build.gradle
lib_openh264/src/main/: AndroidManifest.xml
lib_openh264/src/main/cpp/: CMakeLists.txt  VideoEncoder.cpp  VideoEncoder.h  openh264util.cpp
lib_openh264/src/main/res/values/: strings.xml
lib_xpopup/: build.gradle
lib_yuvutil/src/main/: AndroidManifest.xml
lib_yuvutil/src/main/cpp/: CMakeLists.txt  yuvutils.cpp
standalone/demorunalone/: build.gradle
standalone/demorunalone/src/main/: AndroidManifest.xml
standalone/demorunalone/src/main/res/color/: full_tab_color_selector.xml
standalone/demorunalone/src/main/res/drawable/: active_tab_bg_selector.xml  gray_bg_rounded_corners20.xml  kafei.xml  kele.xml  mianhuatang.xml  selector_tab_main_demo3_icoc.xml  shape_blue.xml  (+7 more)
standalone/demorunalone/src/main/rs/: gray.rs
standalone/receiverrunalone/: build.gradle
standalone/receiverrunalone/src/main/: AndroidManifest.xml
version/: build.gradle
version/src/main/: AndroidManifest.xml
version/src/main/java/: AndroidX.kt  BuildConfig.kt  Support.kt
(+1135 files in other folders)
